MCP-225 Support transport mode definition for external providers